--- a/www/www/templates/index.html
+++ b/www/www/templates/index.html
@@ -3,43 +3,97 @@
 {%block title%}Home{% endblock %}
 
 {%block body%}
-    <div class="jumbotron">
-        <h1>Segment Routing</h1>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-12">
-            <h1>What's Included</h1>
+<div class="container-fluid">
+<div class="row">
+    <div class="col-lg-12">
+        <h1>New Service</h1>
+        <p>Follow the wizard below to add a new service to the network.</p>
+        <div class="fuelux">
+            <div class="wizard" data-initialize="wizard" id="sr-wizard">
+                <div class="steps-container">
+                    <ul class="steps">
+                        <li data-step="1" data-name="service-details" class="active"><span class="badge">1</span>Details<span class="chevron"></span></li>
+                        <li data-step="2" data-name="service-review" class="active"><span class="badge">2</span>Review<span class="chevron"></span></li>
+                    </ul>
+                </div>
+                <div class="actions">
+                    <button type="button" class="btn btn-default btn-prev"><span class="glyphicon glyphicon-arrow-left"></span>Prev</button>
+                    <button type="button" class="btn btn-default btn-next" data-last="Complete">Next<span class="glyphicon glyphicon-arrow-right"></span></button>
+                </div>
+                <div class="step-content">
+                    <div class="step-pane active sample-pane alert" data-step="1">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Ingress Device</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="form-horizontal">
+                                    <div class="form-group">
+                                        <label for="ingress-device-id" class="col-sm-2 control-label">Ingress Device:</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="ingress-device-id" placeholder="Text input">
+                                            <p class="help-block">The device ID</p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="ingress-port" class="col-sm-2 control-label">Input Port Number</label>
+                                        <div class="col-sm-10">
+                                            <input type="number" class="form-control" name="ingress-port" placeholder="Port Number">
+                                            <p class="help-block">Switch port number where traffic will originate for this service</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Egress Device</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="form-horizontal">
+                                    <div class="form-group">
+                                        <label for="egress-device-id" class="col-sm-2 control-label">Egress Device:</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="egress-device-id" placeholder="Text input">
+                                            <p class="help-block">The device ID</p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="egress-port" class="col-sm-2 control-label">Output Port Number</label>
+                                        <div class="col-sm-10">
+                                            <input type="number" class="form-control" name="egress-port" placeholder="Port Number">
+                                            <p class="help-block">Switch port number where traffic leave for this service</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Waypoints</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="form-hoizontal">
+                                    <div class="form-group">
+                                        <label for="waypoints" class="col-sm-2 control-label">Nodes</label>
+                                        <div class="col-sm-10">
+                                            <select name="waypoints" id="waypoints" class="form-control" multiple="multiple">
+                                                <option value="">-- Select One --</option>
+                                                <option value="">-- Select Two --</option>
+                                                <option value="">-- Select Three --</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="step-pane sample-pane alert" data-step="2">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-md-4">
-            <h3>MVC Structure</h3>
-            <p>While there are many other flask templates out there, far too many are either structured poorly or are tied down to a specific method of deployment, or both.</p>
-            <p>So Flask Foundation has a best practices setup with blueprints and SQLAlchemy models that will allow you to grow cleanly</p>
-        </div>
-
-        <div class="col-md-4">
-            <h3>Flask Extensions</h3>
-            <p>Several flask extensions are included to handle the common tasks of web developers. The included extensions are flask-login, flask-assets, flask-WTF, flask-cache, flask-script, and flask-sqlalchemy.</p>
-        </div>
-
-        <div class="col-md-4">
-            <h3>Management Scripts</h3>
-            <p>Using the Makefile, you can easily setup your development environment with a few simple commands. With the power of flask-script you can create your own commands with the flask app context setup for you.</p>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-4">
-            <h3>Tests</h3>
-            <p>Example tests, built with py.test, are included in to demonstrate how to test a flask app.</p>
-        </div>
-
-        <div class="col-md-4">
-            <h3>Common Libraries</h3>
-            <p>The CSS Library Bootstrap is included, along with the Javascript libraries modernizr and jQuery.</p>
-        </div>
-    </div>
+</div>
+</div>
 {%endblock%}
