Splitting out templates into partials

--- a/www/www/templates/index.html
+++ b/www/www/templates/index.html
@@ -8,92 +8,7 @@
     <div class="col-lg-12">
         <h1>New Service</h1>
         <p>Follow the wizard below to add a new service to the network.</p>
-        <div class="fuelux">
-            <div class="wizard" data-initialize="wizard" id="sr-wizard">
-                <div class="steps-container">
-                    <ul class="steps">
-                        <li data-step="1" data-name="service-details" class="active"><span class="badge">1</span>Details<span class="chevron"></span></li>
-                        <li data-step="2" data-name="service-review" class="active"><span class="badge">2</span>Review<span class="chevron"></span></li>
-                    </ul>
-                </div>
-                <div class="actions">
-                    <button type="button" class="btn btn-default btn-prev"><span class="glyphicon glyphicon-arrow-left"></span>Prev</button>
-                    <button type="button" class="btn btn-default btn-next" data-last="Complete">Next<span class="glyphicon glyphicon-arrow-right"></span></button>
-                </div>
-                <div class="step-content">
-                    <div class="step-pane active sample-pane alert" data-step="1">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Ingress Device</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="form-horizontal">
-                                    <div class="form-group">
-                                        <label for="ingress-device-id" class="col-sm-2 control-label">Ingress Device:</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control" name="ingress-device-id" placeholder="Text input">
-                                            <p class="help-block">The device ID</p>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="ingress-port" class="col-sm-2 control-label">Input Port Number</label>
-                                        <div class="col-sm-10">
-                                            <input type="number" class="form-control" name="ingress-port" placeholder="Port Number">
-                                            <p class="help-block">Switch port number where traffic will originate for this service</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Egress Device</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="form-horizontal">
-                                    <div class="form-group">
-                                        <label for="egress-device-id" class="col-sm-2 control-label">Egress Device:</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control" name="egress-device-id" placeholder="Text input">
-                                            <p class="help-block">The device ID</p>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="egress-port" class="col-sm-2 control-label">Output Port Number</label>
-                                        <div class="col-sm-10">
-                                            <input type="number" class="form-control" name="egress-port" placeholder="Port Number">
-                                            <p class="help-block">Switch port number where traffic leave for this service</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Waypoints</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="form-hoizontal">
-                                    <div class="form-group">
-                                        <label for="waypoints" class="col-sm-2 control-label">Nodes</label>
-                                        <div class="col-sm-10">
-                                            <select name="waypoints" id="waypoints" class="form-control" multiple="multiple">
-                                                <option value="">-- Select One --</option>
-                                                <option value="">-- Select Two --</option>
-                                                <option value="">-- Select Three --</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="step-pane sample-pane alert" data-step="2">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+        {% include "partials/_wizard.html" %}
 </div>
 </div>
 {%endblock%}
