--- a/www/www/templates/base.html
+++ b/www/www/templates/base.html
@@ -35,6 +35,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('.home') }}">Home</a></li>
+                    <li><a href="{{ url_for('.services') }}">Services</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
