--- a/www/www/templates/partials/_device_panel.html
+++ b/www/www/templates/partials/_device_panel.html
@@ -7,14 +7,18 @@
             <div class="form-group">
                 <label for="{{ device_type }}-device-id" class="col-sm-2 control-label">{{ device_type | capitalize }} Device:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="{{ device_type }}-switch" placeholder="Text input" required>
+                    <select name="{{ device_type }}-switch" id="{{ device_type }}-switch" class="form-control">
+                        {% for node in topo: %}
+                        <option value="{{node}}">{{node}}</option>
+                        {% endfor %}
+                    </select>
                     <p class="help-block">The device ID</p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="{{ device_type }}-port" class="col-sm-2 control-label">Port Number</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" name="{{ device_type }}-port" placeholder="Port Number" required>
+                    <input type="number" min="1" class="form-control" name="{{ device_type }}-port" placeholder="Port Number" required>
                     <p class="help-block">Switch port number</p>
                 </div>
             </div>
