--- a/www/www/templates/partials/_device_panel.html
+++ b/www/www/templates/partials/_device_panel.html
@@ -8,7 +8,7 @@
                 <label for="{{ device_type }}-device-id" class="col-sm-2 control-label">{{ device_type | capitalize }} Device:</label>
                 <div class="col-sm-10">
                     <select name="{{ device_type }}-switch" id="{{ device_type }}-switch" class="form-control">
-                        {% for node in topo: %}
+                        {% for node in topo|sort: %}
                         <option value="{{node}}">{{node}}</option>
                         {% endfor %}
                     </select>
