--- a/www/www/templates/partials/_step1.html
+++ b/www/www/templates/partials/_step1.html
@@ -15,7 +15,7 @@
                     <label for="waypoints" class="col-sm-2 control-label">Nodes</label>
                     <div class="col-sm-10">
                         <select name="waypoints" id="waypoints" class="form-control" multiple="multiple">
-                            {% for node in topo: %}
+                            {% for node in topo|sort: %}
                             <option value="{{node}}">{{node}}</option>
                             {% endfor %}
                         </select>
